@@ -8,6 +8,8 @@
     * remove useless XML::FeedPP::Common layer
     * fixed #71318: save use of timegm
       (thanks to Brian Gomes Bascoy)
+    * fixed #72523: merge of items in channel changes guid
+      (thanks to Никулин Юрий)
 
 2011/05/09 (0.45_01) ** DEVELOPER RELEASE
     * supports subclassing. t/47_subclass_content.t added.
